--- a/Navigation Bar/Base.lproj/Main.storyboard
+++ b/Navigation Bar/Base.lproj/Main.storyboard
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8191" systemVersion="15A284" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Navigation_Bar" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,11 +16,75 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OZb-TJ-9IW">
+                                <rect key="frame" x="0.0" y="20" width="600" height="44"/>
+                                <animations/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="eW0-3Y-Y5F"/>
+                                </constraints>
+                                <items>
+                                    <navigationItem title="STOP WATCH" id="5bs-gf-prq">
+                                        <barButtonItem key="rightBarButtonItem" title="Start" id="AZg-32-3H3">
+                                            <connections>
+                                                <action selector="startButton:" destination="BYZ-38-t0r" id="azn-Wm-Z1u"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LEB-5u-p4I">
+                                <rect key="frame" x="0.0" y="556" width="600" height="44"/>
+                                <animations/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="hTi-aJ-8Xf"/>
+                                </constraints>
+                                <items>
+                                    <barButtonItem title="Stop" id="E1O-Hb-wKF">
+                                        <connections>
+                                            <action selector="stopButton:" destination="BYZ-38-t0r" id="Okv-Ty-DRs"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="Y8v-q3-pSF"/>
+                                    <barButtonItem title="Pause" id="eRZ-G5-304">
+                                        <connections>
+                                            <action selector="pauseButton:" destination="BYZ-38-t0r" id="fUB-5P-hxJ"/>
+                                        </connections>
+                                    </barButtonItem>
+                                </items>
+                            </toolbar>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0:00" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="03l-ka-uTK">
+                                <rect key="frame" x="229" y="258" width="143" height="84"/>
+                                <animations/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="84" id="jNt-cG-Nmb"/>
+                                    <constraint firstAttribute="width" constant="143" id="wNI-Nl-a0K"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="34"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="LEB-5u-p4I" secondAttribute="trailing" constant="-20" id="1H4-p6-Tgg"/>
+                            <constraint firstItem="LEB-5u-p4I" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-20" id="37V-Ok-VRJ"/>
+                            <constraint firstItem="OZb-TJ-9IW" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-20" id="IWJ-a5-Zrd"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="OZb-TJ-9IW" secondAttribute="trailing" constant="-20" id="Nkp-Pc-2l0"/>
+                            <constraint firstItem="03l-ka-uTK" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="gab-mQ-CJv"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="LEB-5u-p4I" secondAttribute="bottom" id="j0i-Jp-Nka"/>
+                            <constraint firstItem="03l-ka-uTK" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="lFG-7x-cAf"/>
+                            <constraint firstItem="OZb-TJ-9IW" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="qKO-aF-Ix9"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="timeLabel" destination="03l-ka-uTK" id="YrR-pg-ksa"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="440" y="294"/>
         </scene>
     </scenes>
 </document>
